Opened 2 years ago
Closed 2 years ago
#18033 closed bug (fixed)
[registrar] shutdown dialog: gray stripe is missing for text with no icons
Reported by: | diver | Owned by: | waddlesplash |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta4 |
Component: | Servers/registrar | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description (last modified by )
Attachments (1)
Change History (4)
comment:1 by , 2 years ago
Description: | modified (diff) |
---|
by , 2 years ago
Attachment: | registrar.png added |
---|
comment:2 by , 2 years ago
Milestone: | Unscheduled → R1/beta4 |
---|
comment:3 by , 2 years ago
Resolution: | → fixed |
---|---|
Status: | assigned → closed |
Note:
See TracTickets
for help on using tickets.
Fixed in hrev56589.