BAlert: Reserve room for stripe and large icon

... even if no icon is present. Draw stripe w/o icon.

"After ... hrev56382 alerts ... with no icons appears without a
gray stripe, causing it to jump left and right."

Fixes #18033 for R1B4 Release Milestone.

Change-Id: I35acc07411cadd4b394d6dfa1957049280b6f4b3
Reviewed-on: https://review.haiku-os.org/c/haiku/+/5810
Tested-by: Commit checker robot <no-reply+buildbot@haiku-os.org>
Reviewed-by: waddlesplash <waddlesplash@gmail.com>
(cherry picked from commit 369c7b11d23ebdae65e647e87d39f00e6c75ea6c)
Reviewed-on: https://review.haiku-os.org/c/haiku/+/5783